@@ -28,15 +28,15 @@ FIELD		|delay		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 
 TABLE|slides|slideid|ZBX_SYNC
 FIELD		|slideid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|slideshowid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|screenid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|slideshowid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|slideshows
+FIELD		|screenid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|screens
 FIELD		|step		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|delay		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 INDEX		|slides_1	|slideshowid
 
 TABLE|drules|druleid|ZBX_SYNC
 FIELD		|druleid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|proxy_hostid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|proxy_hostid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|hosts
 FIELD		|name		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|iprange	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|delay		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
@@ -45,7 +45,7 @@ FIELD		|status		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 
 TABLE|dchecks|dcheckid|ZBX_SYNC
 FIELD		|dcheckid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|druleid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
+FIELD		|druleid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY	|drules
 FIELD		|type		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|key_		|t_varchar(255)	|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|snmp_community	|t_varchar(255)	|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
@@ -61,7 +61,7 @@ FIELD		|lastdown	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 
 TABLE|dservices|dserviceid|ZBX_SYNC
 FIELD		|dserviceid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|dhostid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|dhostid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|dhosts
 FIELD		|type		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|key_		|t_varchar(255)	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|value		|t_varchar(255)	|'0'	|NOT NULL	|ZBX_SYNC
@@ -71,7 +71,7 @@ FIELD		|lastup		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|lastdown	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 
 TABLE|ids|nodeid,table_name,field_name|
-FIELD		|nodeid		|t_integer	|'0'	|NOT NULL	|0
+FIELD		|nodeid		|t_integer	|'0'	|NOT NULL	|0			|nodes
 FIELD		|table_name	|t_varchar(64)	|''	|NOT NULL	|0
 FIELD		|field_name	|t_varchar(64)	|''	|NOT NULL	|0
 FIELD		|nextid		|t_id		|'0'	|NOT NULL	|0
@@ -79,7 +79,7 @@ FIELD		|nextid		|t_id		|'0'	|NOT NULL	|0
 TABLE|httptest|httptestid|ZBX_SYNC
 FIELD		|httptestid	|t_id		|'0'	|NOT NULL	|0
 FIELD		|name		|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
-FIELD		|applicationid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|applicationid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|applications
 FIELD		|lastcheck	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|nextcheck	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|curstate	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
@@ -95,7 +95,7 @@ INDEX		|httptest_1	|applicationid
 
 TABLE|httpstep|httpstepid|ZBX_SYNC
 FIELD		|httpstepid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|httptestid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|httptestid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|httptest
 FIELD		|name		|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|no		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|url		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
@@ -107,15 +107,15 @@ INDEX		|httpstep_1	|httptestid
 
 TABLE|httpstepitem|httpstepitemid|ZBX_SYNC
 FIELD		|httpstepitemid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|httpstepid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|httpstepid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|httpstep
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|items
 FIELD		|type		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 UNIQUE		|httpstepitem_1	|httpstepid,itemid
 
 TABLE|httptestitem|httptestitemid|ZBX_SYNC
 FIELD		|httptestitemid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|httptestid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|httptestid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|httptest
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|items
 FIELD		|type		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 UNIQUE		|httptestitem_1	|httptestid,itemid
 
@@ -132,7 +132,7 @@ FIELD		|nodetype	|t_integer	|'0'	|NOT NULL	|0
 FIELD		|masterid	|t_integer	|'0'	|NOT NULL	|0
 
 TABLE|node_cksum||0
-FIELD		|nodeid		|t_integer	|'0'	|NOT NULL	|0
+FIELD		|nodeid		|t_integer	|'0'	|NOT NULL	|0			|nodes
 FIELD		|tablename	|t_varchar(64)	|''	|NOT NULL	|0
 FIELD		|recordid	|t_id		|'0'	|NOT NULL	|0
 FIELD		|cksumtype	|t_integer	|'0'	|NOT NULL	|0
@@ -153,11 +153,11 @@ INDEX		|times_1	|serviceid,type,ts_from,ts_to
 
 TABLE|alerts|alertid|ZBX_HISTORY
 FIELD		|alertid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|actionid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|eventid	|t_id		|'0'	|NOT NULL	|0
+FIELD		|actionid	|t_id		|'0'	|NOT NULL	|0			|actions
+FIELD		|eventid	|t_id		|'0'	|NOT NULL	|0			|events
 FIELD		|userid		|t_id		|'0'	|NOT NULL	|0
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
-FIELD		|mediatypeid	|t_id		|'0'	|NOT NULL	|0
+FIELD		|mediatypeid	|t_id		|'0'	|NOT NULL	|0			|media_type
 FIELD		|sendto		|t_varchar(100)	|''	|NOT NULL	|0
 FIELD		|subject	|t_varchar(255)	|''	|NOT NULL	|0
 FIELD		|message	|t_blob		|''	|NOT NULL	|0
@@ -175,50 +175,50 @@ INDEX		|5		|mediatypeid
 INDEX		|6		|userid
 
 TABLE|history||0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|value		|t_double	|'0.0000'|NOT NULL	|0
 INDEX		|1		|itemid,clock
 
 TABLE|history_sync|id|ZBX_HISTORY_SYNC
 FIELD		|id		|t_serial	|	|NOT NULL	|0
-FIELD		|nodeid		|t_id		|'0'	|NOT NULL	|0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC
+FIELD		|nodeid		|t_id		|'0'	|NOT NULL	|0			|nodes
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC	|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC
 FIELD		|value		|t_double	|'0.0000'|NOT NULL	|ZBX_HISTORY_SYNC
 INDEX		|1		|nodeid,id
 
 TABLE|history_uint||0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|value		|t_bigint	|'0'	|NOT NULL	|0
 INDEX		|1		|itemid,clock
 
 TABLE|history_uint_sync|id|ZBX_HISTORY_SYNC
 FIELD		|id		|t_serial	|	|NOT NULL	|0
-FIELD		|nodeid		|t_id		|'0'	|NOT NULL	|0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC
+FIELD		|nodeid		|t_id		|'0'	|NOT NULL	|0			|nodes
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC	|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC
 FIELD		|value		|t_bigint	|'0'	|NOT NULL	|ZBX_HISTORY_SYNC
 INDEX		|1		|nodeid,id
 
 TABLE|history_str||0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|value		|t_varchar(255)	|''	|NOT NULL	|0
 INDEX		|1		|itemid,clock
 
 TABLE|history_str_sync|id|ZBX_HISTORY_SYNC
 FIELD		|id		|t_serial	|	|NOT NULL	|0
-FIELD		|nodeid		|t_id		|'0'	|NOT NULL	|0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC
+FIELD		|nodeid		|t_id		|'0'	|NOT NULL	|0			|nodes
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC	|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|ZBX_HISTORY_SYNC
 FIELD		|value		|t_varchar(255)	|''	|NOT NULL	|ZBX_HISTORY_SYNC
 INDEX		|1		|nodeid,id
 
 TABLE|history_log|id|ZBX_HISTORY
 FIELD		|id		|t_id		|'0'	|NOT NULL	|0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|timestamp	|t_time		|'0'	|NOT NULL	|0
 FIELD		|source		|t_varchar(64)	|''	|NOT NULL	|0
@@ -228,14 +228,14 @@ INDEX		|1		|itemid,clock
 
 TABLE|history_text|id|ZBX_HISTORY
 FIELD		|id		|t_id		|'0'	|NOT NULL	|0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|value		|t_history_text	|''	|NOT NULL	|0
 INDEX		|1		|itemid,clock
 
 TABLE|proxy_history|id|0
 FIELD		|id		|t_serial	|	|NOT NULL	|0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|timestamp	|t_time		|'0'	|NOT NULL	|0
 FIELD		|source		|t_varchar(64)	|''	|NOT NULL	|0
@@ -267,7 +267,7 @@ INDEX		|1		|object,objectid,eventid
 INDEX		|2		|clock
 
 TABLE|trends|itemid,clock|ZBX_HISTORY_TRENDS
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|num		|t_integer	|'0'	|NOT NULL	|0
 FIELD		|value_min	|t_double	|'0.0000'|NOT NULL	|0
@@ -275,7 +275,7 @@ FIELD		|value_avg	|t_double	|'0.0000'|NOT NULL	|0
 FIELD		|value_max	|t_double	|'0.0000'|NOT NULL	|0
 
 TABLE|trends_uint|itemid,clock|ZBX_HISTORY_TRENDS
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|0			|items
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|num		|t_integer	|'0'	|NOT NULL	|0
 FIELD		|value_min	|t_bigint	|'0'	|NOT NULL	|0
@@ -285,7 +285,7 @@ FIELD		|value_max	|t_bigint	|'0'	|NOT NULL	|0
 TABLE|acknowledges|acknowledgeid|ZBX_HISTORY
 FIELD		|acknowledgeid	|t_id		|'0'	|NOT NULL	|0
 FIELD		|userid		|t_id		|'0'	|NOT NULL	|0
-FIELD		|eventid	|t_id		|'0'	|NOT NULL	|0
+FIELD		|eventid	|t_id		|'0'	|NOT NULL	|0			|events
 FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|message	|t_varchar(255)	|''	|NOT NULL	|0
 INDEX		|1		|userid
@@ -327,7 +327,7 @@ FIELD		|r_longdata	|t_blob		|''	|NOT NULL	|ZBX_SYNC
 
 TABLE|operations|operationid|ZBX_SYNC
 FIELD		|operationid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|actionid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|actionid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|actions
 FIELD		|operationtype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|object		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|objectid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
@@ -342,7 +342,7 @@ INDEX		|1		|actionid
 
 TABLE|opconditions|opconditionid|ZBX_SYNC
 FIELD		|opconditionid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|operationid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|operationid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|operations
 FIELD		|conditiontype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|operator	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|value		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
@@ -350,10 +350,10 @@ INDEX		|1		|operationid
 
 TABLE|escalations|escalationid|0
 FIELD		|escalationid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|actionid	|t_id		|'0'	|NOT NULL	|0
+FIELD		|actionid	|t_id		|'0'	|NOT NULL	|0			|actions
 FIELD		|triggerid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|eventid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|r_eventid	|t_id		|'0'	|NOT NULL	|0
+FIELD		|eventid	|t_id		|'0'	|NOT NULL	|0			|events
+FIELD		|r_eventid	|t_id		|'0'	|NOT NULL	|0			|events
 FIELD		|nextcheck	|t_time		|'0'	|NOT NULL	|0
 FIELD		|esc_step	|t_integer	|'0'	|NOT NULL	|0
 FIELD		|status		|t_integer	|'0'	|NOT NULL	|0
@@ -361,7 +361,7 @@ INDEX		|1		|actionid,triggerid
 
 TABLE|applications|applicationid|ZBX_SYNC
 FIELD		|applicationid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|hosts
 FIELD		|name		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|templateid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 INDEX		|1		|templateid
@@ -369,7 +369,7 @@ UNIQUE		|2		|hostid,name
 
 TABLE|conditions|conditionid|ZBX_SYNC
 FIELD		|conditionid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|actionid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|actionid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|actions
 FIELD		|conditiontype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|operator	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|value		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
@@ -380,12 +380,12 @@ FIELD		|configid	|t_id		|'0'	|NOT NULL	|0
 FIELD		|alert_history	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|event_history	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|refresh_unsupported|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|work_period	|t_varchar(100)	|'1-5,00:00-24:00'	|NOT NULL	|ZBX_SYNC
+FIELD		|work_period	|t_varchar(100)	|'1-5,00:00-24:00'|NOT NULL	|ZBX_SYNC
 FIELD		|alert_usrgrpid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|event_ack_enable|t_integer	|'1'	|NOT NULL	|ZBX_SYNC
 FIELD		|event_expire	|t_integer	|'7'	|NOT NULL	|ZBX_SYNC
 FIELD		|event_show_max	|t_integer	|'100'	|NOT NULL	|ZBX_SYNC
-FIELD		|default_theme	|t_varchar(128)	|'default.css'	|NOT NULL	|ZBX_SYNC
+FIELD		|default_theme	|t_varchar(128)	|'default.css'|NOT NULL	|ZBX_SYNC
 FIELD		|authentication_type|t_integer	|0	|NOT NULL	|ZBX_SYNC
 FIELD		|ldap_host	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|ldap_port	|t_integer	|389	|NOT NULL	|ZBX_SYNC
@@ -396,7 +396,7 @@ FIELD		|ldap_search_attribute|t_varchar(128)|''|NOT NULL	|ZBX_SYNC
 
 TABLE|functions|functionid|ZBX_SYNC
 FIELD		|functionid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|items
 FIELD		|triggerid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|lastvalue	|t_varchar(255)	|	|		|0
 FIELD		|function	|t_varchar(12)	|''	|NOT NULL	|ZBX_SYNC
@@ -424,11 +424,11 @@ INDEX		|graphs_1	|name
 
 TABLE|graphs_items|gitemid|ZBX_SYNC
 FIELD		|gitemid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|graphid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|graphid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|graphs
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|items
 FIELD		|drawtype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|sortorder	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|color		|t_varchar(32)	|'009600'	|NOT NULL	|ZBX_SYNC
+FIELD		|color		|t_varchar(32)	|'009600'|NOT NULL	|ZBX_SYNC
 FIELD		|yaxisside	|t_integer	|'1'	|NOT NULL	|ZBX_SYNC
 FIELD		|calc_fnc	|t_integer	|'2'	|NOT NULL	|ZBX_SYNC
 FIELD		|type		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
@@ -448,7 +448,7 @@ FIELD		|description	|t_varchar(255)	|''	|NOT NULL	|0
 
 TABLE|hosts|hostid|ZBX_SYNC
 FIELD		|hostid		|t_id		|'0'	|NOT NULL	|0
-FIELD		|proxy_hostid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|proxy_hostid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|hosts
 FIELD		|host		|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|dns		|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|useip		|t_integer	|'1'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
@@ -478,12 +478,12 @@ INDEX		|3		|proxy_hostid
 
 TABLE|hosts_groups|hostgroupid|ZBX_SYNC
 FIELD		|hostgroupid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|groupid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|hosts
+FIELD		|groupid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|groups
 INDEX		|groups_1	|hostid,groupid
 
 TABLE|hosts_profiles|hostid|ZBX_SYNC
-FIELD		|hostid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|hostid		|t_id		|'0'	|NOT NULL	|0			|hosts
 FIELD		|devicetype	|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|name		|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|os		|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
@@ -497,7 +497,7 @@ FIELD		|location	|t_blob		|''	|NOT NULL	|ZBX_SYNC
 FIELD		|notes		|t_blob		|''	|NOT NULL	|ZBX_SYNC
 
 TABLE|hosts_profiles_ext|hostid|ZBX_SYNC
-FIELD		|hostid		|t_id		|'0'	|NOT NULL	|0
+FIELD		|hostid		|t_id		|'0'	|NOT NULL	|0			|hosts
 FIELD		|device_alias	|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|device_type	|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|device_chassis	|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
@@ -559,7 +559,7 @@ FIELD		|poc_2_notes	|t_blob		|''	|NOT NULL	|ZBX_SYNC
 
 TABLE|hosts_templates|hosttemplateid|ZBX_SYNC
 FIELD		|hosttemplateid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|hosts
 FIELD		|templateid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 UNIQUE		|1		|hostid,templateid
 
@@ -582,7 +582,7 @@ FIELD		|type		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|snmp_community	|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|snmp_oid	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|snmp_port	|t_integer	|'161'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
-FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
+FIELD		|hostid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY	|hosts
 FIELD		|description	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|key_		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
 FIELD		|delay		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC,ZBX_PROXY
@@ -619,8 +619,8 @@ INDEX		|4		|templateid
 
 TABLE|items_applications|itemappid|ZBX_SYNC
 FIELD		|itemappid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|applicationid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|applicationid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|applications
+FIELD		|itemid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|items
 INDEX		|1		|applicationid,itemid
 INDEX		|2		|itemid
 
@@ -634,7 +634,7 @@ INDEX		|1		|valuemapid
 TABLE|media|mediaid|ZBX_SYNC
 FIELD		|mediaid	|t_id		|'0'	|NOT NULL	|0
 FIELD		|userid		|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|mediatypeid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|mediatypeid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|media_type
 FIELD		|sendto		|t_varchar(100)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|active		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|severity	|t_integer	|'63'	|NOT NULL	|ZBX_SYNC
@@ -689,7 +689,7 @@ FIELD		|vsize		|t_integer	|'1'	|NOT NULL	|ZBX_SYNC
 
 TABLE|screens_items|screenitemid|ZBX_SYNC
 FIELD		|screenitemid	|t_id		|'0'	|NOT NULL	|0
-FIELD		|screenid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|screenid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC		|screens
 FIELD		|resourcetype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|resourceid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|width		|t_integer	|'320'	|NOT NULL	|ZBX_SYNC
@@ -807,7 +807,7 @@ FIELD		|autologout	|t_integer	|'900'	|NOT NULL	|ZBX_SYNC
 FIELD		|lang		|t_varchar(5)	|'en_gb'|NOT NULL	|ZBX_SYNC
 FIELD		|refresh	|t_integer	|'30'	|NOT NULL	|ZBX_SYNC
 FIELD		|type		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|theme		|t_varchar(128)	|'default.css'	|NOT NULL	|ZBX_SYNC
+FIELD		|theme		|t_varchar(128)	|'default.css'|NOT NULL	|ZBX_SYNC
 FIELD		|attempt_failed	|t_integer	|0	|NOT NULL	|ZBX_SYNC
 FIELD		|attempt_ip	|t_varchar(39)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|attempt_clock	|t_integer	|0	|NOT NULL	|ZBX_SYNC
